<resources>

    <string name="app_name">Photo to Ducksboard</string>
    <string name="title_activity_main">Photo to Ducksboard</string>
    <string name="send">Send</string>
    <string name="title">Photo to Ducksboard</string>
    <string name="menu_settings">Settings</string>
    <string name="apikey">API key</string>
    <string name="or">- or -</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="button">Sign in</string>
    <string name="configure">Sign in to Ducksboard</string>
    <string name="failed">Signing in failed</string>
    <string name="saved">Signed in</string>
    <string name="not_connected">Not connected</string>
    <string name="change">Change user</string>
    <string name="no_user">Not signed in</string>
    <string name="choose_widget">Choose destination widget</string>
    <string name="not_configured">Sign in to Ducksboard first</string>
    <string name="sending">Sending image</string>
    <string name="loading_widgets">Loading widgets</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="go_to_configuration">Sign in to Ducksboard</string>
    <string name="no_widgets">No image widgets</string>
    <string name="caption_ok">Use caption</string>
    <string name="caption_cancel">No caption</string>
    <string name="caption_title">Choose caption</string>
    <string name="caption_message">Use a caption?</string>

</resources>